--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -129,6 +129,28 @@ textarea {
   }
 }
 
+@media (max-width:1366px){
+
+ .courseDis p{
+  font-size: 12px!important;
+  }
+}
+
+@media (max-width:1600px){
+
+  .courseDis p{
+   font-size: 12px!important;
+   }
+ }
+
+ @media (max-width:1920px){
+
+  .courseDis p{
+   font-size: 13px!important;
+   line-height: 140%;
+   }
+ }
+
 p {
   @apply text-[16px];
 }
@@ -1099,7 +1121,7 @@ input {
   .smallf {
     letter-spacing: 0.5px !important;
     font-size: 12px !important;
-    line-height: 16px !important;
+    line-height: 100% !important;
   }
 
   .mediumf {
@@ -1185,7 +1207,7 @@ input {
   .smallf {
     letter-spacing: 0.5px !important;
     font-size: 12px !important;
-    line-height: 16px !important;
+    line-height:100% !important;
   }
 
   .mediumf {
@@ -1261,7 +1283,7 @@ input {
   .smallf {
     letter-spacing: 0.5px !important;
     font-size: 12px !important;
-    line-height: 16px !important;
+    line-height: 100% !important;
   }
 
   .mediumf {
@@ -1350,9 +1372,14 @@ input {
     font-size: 15px !important;
   }
 
+  .smallfXL {
+
+    font-size: 11px!important;
+  }
+
   .smallf {
     font-size: 12px !important;
-    line-height: 16px !important;
+    line-height: 100% !important;
   }
 
   .mediumf {
@@ -1439,6 +1466,11 @@ input {
 
   .minismallf {
     font-size: 15px !important;
+  }
+
+  .smallfXL {
+
+    font-size: 11px!important;
   }
 
   .smallf {
@@ -1535,6 +1567,11 @@ input {
     font-size: 10px !important;
   }
 
+  .smallfXL {
+
+    font-size: 10px!important;
+  }
+
   .smallf {
     font-size: 9px !important;
   }
@@ -1625,6 +1662,11 @@ input {
 
   .minismallf {
     font-size: 10px !important;
+  }
+
+  .smallfXL {
+
+    font-size: 9.5px!important;
   }
 
   .smallf {
@@ -2868,6 +2910,10 @@ input {
   .minismallf {
     font-size: 15px;
   }
+  .smallfXL {
+
+    font-size: 12.5px;
+  }
 
   .smallf {
     font-size: 10px;
@@ -2967,6 +3013,11 @@ input {
     font-size: 15px;
   }
 
+  .smallfXL {
+
+    font-size: 12.5px;
+  }
+
   .smallf {
     font-size: 12px;
   }
@@ -3049,6 +3100,11 @@ input {
 
   .minismallf {
     font-size: 15px;
+  }
+
+  .smallfXL {
+
+    font-size: 12.5px;
   }
 
   .smallf {
@@ -3149,9 +3205,14 @@ input {
     font-size: 15px;
   }
 
+  .smallfXL {
+
+    font-size: 12.5px;
+  }
+
   .smallf {
     font-size: 14px;
-    line-height: 16px;
+    line-height: 100%;
   }
 
   .mediumf {
@@ -3241,6 +3302,11 @@ input {
 
   .minismallf {
     font-size: 15px;
+  }
+
+  .smallfXL {
+
+    font-size: 13px;
   }
 
   .smallf {
@@ -3412,13 +3478,13 @@ input {
   }
 
   .smallf {
-    line-height: 20px;
+    line-height:100%;
     font-size: 17px;
   }
 
   .smallfXL {
 
-    font-size: 18px;
+    font-size: 14px;
   }
 
   .mediumf {
@@ -3539,7 +3605,7 @@ input {
 
   .smallf {
     line-height: 25px;
-    font-size: 19px;
+    font-size: 100%;
   }
 
   .smallfXL {
@@ -3670,7 +3736,7 @@ input {
 
   .smallf {
     font-size: 18px;
-    line-height: 30px;
+    line-height: 100%;
     letter-spacing: 0.5px;
   }
 
@@ -3765,7 +3831,6 @@ input {
     letter-spacing: -1.5px;
     line-height: 130px;
   }
-
   /* custom font for start */
 
   .startFont {
