--- a/components/Start/Start.module.css
+++ b/components/Start/Start.module.css
@@ -46,13 +46,14 @@
 }
 
 
+/* dropshadow add button  */
+
+.shadowAddBtn{
+    filter: drop-shadow(0px 9px 18px rgba(48, 0, 0, 0.82));
+}
 
 /* updown animation for scroll btn */
-
-
-
 .UpDownAnimation {
-
     animation: upDownAnimate linear 500ms infinite alternate;
 }
 
