--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3956,7 +3956,7 @@ input {
 .loader {
   margin: auto;
   border: 3px dotted #dadada;
-  border-top: 3px solid #3498db;
+  border-top: 3px solid #9747FF;
   border-radius: 50%;
   width: 25px;
   height: 25px;
