--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -299,7 +299,6 @@ ol {
 }
 
 /* suraj css start */
-
 /* tooltips section css */
 .tooltip {
   position: relative;
@@ -1129,6 +1128,11 @@ input {
 
 @media (max-height:840px) and (min-width:992px) {
 
+  .cartImage {
+    width: 50px;
+    height: 50px;
+  }
+
   .extxlsmallf {
     font-size: 12px !important;
   }
@@ -1669,6 +1673,10 @@ input {
 }
 
 @media (max-height:485px) and (min-width:992px) {
+  .cartImage {
+    width: 40px !important;
+    height: 40px !important;
+  }
 
   .giftShipping {
     font-size: 9px !important;
@@ -1929,9 +1937,12 @@ input {
 
 /* custom image size for small desktop device */
 @media only screen and (min-width:425px) {
+  .cartImage {
+    width: 50px;
+    height: 50px;
+  }
 
   .logoImg {
-
     width: 230px;
     height: 81px;
     margin-top: 40px;
@@ -2016,8 +2027,12 @@ input {
 /* custom image size for small desktop device */
 @media only screen and (min-width:1024px) {
 
-  .logoImg {
+  .cartImage {
+    width: 50px;
+    height: 50px;
+  }
 
+  .logoImg {
     width: 230px;
     height: 80px;
     margin-top: 40px;
@@ -2102,8 +2117,13 @@ input {
 /* custom image size for 1280 desktop device */
 @media only screen and (min-width:1280px) {
 
-  .logoImg {
+  .cartImage {
+    width: 60px;
+    height: 60px;
+  }
 
+
+  .logoImg {
     margin-top: 40px;
     width: 214px;
     height: 80px;
@@ -2188,6 +2208,11 @@ input {
 /* custom image size for 1366 desktop device */
 @media only screen and (min-width:1366px) {
 
+  .cartImage {
+    width: 65px;
+    height: 65px;
+  }
+
   .logoImg {
     width: 243px;
     height: 87px;
@@ -2271,8 +2296,13 @@ input {
 /* custom image size for 1440 desktop device */
 @media only screen and (min-width:1440px) {
 
-  .logoImg {
+  .cartImage {
+    width: 70px;
+    height: 70px;
+  }
 
+
+  .logoImg {
     width: 276px;
     height: 95px;
     margin-top: 60px;
@@ -2358,8 +2388,13 @@ input {
 /* custom image size for 1600 desktop device */
 @media only screen and (min-width:1600px) {
 
-  .logoImg {
+  .cartImage {
+    width: 75px;
+    height: 75px;
+  }
 
+
+  .logoImg {
     width: 276px;
     height: 95px;
     margin-top: 60px;
@@ -2438,8 +2473,13 @@ input {
 /* custom image size for 1920 desktop device */
 @media only screen and (min-width:1750px) {
 
-  .logoImg {
+  .cartImage {
+    width: 78px;
+    height: 78px;
+  }
 
+
+  .logoImg {
     width: 276px;
     height: 95px;
     margin-top: 60px;
@@ -2524,13 +2564,16 @@ input {
 /* custom image size for 1920 desktop device */
 @media only screen and (min-width:1850px) {
 
-  .logoImg {
+  .cartImage {
+    width: 80px;
+    height: 80px;
+  }
 
+
+  .logoImg {
     width: 276px;
     height: 85px;
     margin-top: 60px;
-
-
   }
 
   .ncbtmbImg {
@@ -3759,7 +3802,7 @@ input {
   }
 
   .smallf {
-    font-size: 18px;
+    font-size: 17px;
     line-height: 100%;
     letter-spacing: 0.5px;
   }
